# backend/docs/swagger.yaml
@@ -362,4 +362,27 @@ paths:
       summary: 获取用户列表
       tags:
       - 用户 (User)
+  /users/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: 管理员在后台删除指定用户，超级管理员(admin)不能被删除
+      parameters:
+      - description: 要删除的用户ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/models.Response'
+      security:
+      - BearerAuth: []
+      summary: 删除用户
+      tags:
+      - 用户 (User)
 swagger: "2.0"
